# MelaNone

./: .gitignore  .gitmodules  README.md  pyproject.toml
backend/: main.py  server.py
backend/api/: start.py
backend/debug/: error_handling.py
backend/embedded/: controller.ino  device_manager.py
backend/image/: model.py
backend/internal/: mesh.py  model.py  test.py  uv_processor.py
firmware/: controller.ino
frontend/: app.html  app.jsx  index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/pages/: LoadingScreen.jsx  ResultsScreen.jsx  WelcomeScreen.jsx
frontend/src/styles/: LoadingScreen.css  ResultsScreen.css  WelcomeScreen.css
