[project]
name = "melanone"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.2",
    "flask-cors>=6.0.2",
    "torch>=2.9.1",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "rich>=14.2.0",
    "open3d>=0.19.0",
    "opencv-contrib-python>=4.11.0.86",
    "pyserial>=3.5",
]
